2003-07-16  Royce Mitchell III <royce3@ev1.net>

	* integrated Art Yerkes' _ftime implementation at
	lib/msvcrt/time/ftime.c
	* fixed ungetc warning in lib/msvcrt/stdio/vfscanf.c (also
	renamed ungetc macro to UNGETC for clarity)

2003-07-15  Royce Mitchell III <royce3@ev1.net>

	* fixed references to errno in MSVCRT to use __set_errno() and
	_errno() respectively.
	* Fixed warning (args 3 & 6 in call to CreateThread) in
	lib/msvcrt/process/threadx.c

2003-07-15  Royce Mitchell III <royce3@ev1.net>

	* modified crtdll to forward most of it's CTYPE, STRING
	and WSTRING entries to NTDLL or MSVCRT.

2003-07-14  James Tabor	<jimtabor@adsl-64-217-116-74.dsl.hstntx.swbell.net>

	* lib/gdi32/misc/stubs.c Remove FillRgn.
	* lib/gdi32/objects/region.c Add FillRng.
	It looks okay.

2003-07-12  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	Changes for compiling with w32api

	* include/ddk/extypes.h (NPAGED_LOOKASIDE_LIST, PAGED_LOOKASIDE_LIST):
	Match w32api fields.
	* include/ddk/halfuncs.h (HalReturnToFirmware, HalReleaseDisplayOwnership,
	HalQueryDisplayOwnership): Move ...
	* include/ntos/halfuncs.h: ... here.
	* include/ntos/rtl.h: (PopEntrySList, PushEntrySList): Move to
	ntoskrnl/ex/lookas.c.
	* include/ntos/zw.h (NtAccessCheckAndAuditAlarm, NtCancelTimer,
	NtCreatePagingFile, NtCreateThread, NtFlushInstructionCache,
	NtFlushVirtualMemory, NtGetTickCount, NtLoadKey, NtLockVirtualMemory,
	NtOpenObjectAuditAlarm, NtProtectVirtualMemory, NtQueryDirectoryObject,
	NtQueryIntervalProfile, NtQueryVirtualMemory, NtRaiseHardError,
	NtSetInformationKey, NtSetInformationObject, NtSetTimer, NtUnloadKey,
	NtUnlockVirtualMemory, NtWaitForMultipleObjects, NtCreateProfile,
	NtDelayExecution, NtExtendSection, NtQuerySection): Include for w32api.
	* ntoskrnl/ntoskrnl.def (ExInterlockedAddUlong,
	ExInterlockedInsertHeadList, ExInterlockedInsertTailList,
	ExInterlockedPopEntryList, ExInterlockedPushEntryList,
	ExInterlockedRemoveHeadList): Make FASTCALL.